--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uid": "^2.0.2",
+    "use-local-storage-state": "^19.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
